src/css/rtl.css
/*
* Meshki v1.3.0
* Copyright 2016, Mohammad reza Hajianpour <me@borderliner.ir>
* http://meshki.borderliner.ir/
* Free to use under the MIT license.
* https://opensource.org/licenses/MIT
*/

body {
  direction: rtl;
  font-family: "P Yekan", "Open Sans", sans-serif;
}

button, input, optgroup, select, textarea {
  font-family: "P Yekan", "Open Sans", sans-serif;
}

pre {
  direction: ltr;
}

a.button,
button,
input[type="submit"],
input[type="reset"],
input[type="button"] {
  padding: 6px 15px;
}

select {
  background-position: 2% 50%;
}

td, th {
  text-align: right;
}

.nav ul li {
  float: right;
  margin-bottom: 0px;
}

/* Logo of the website, it must be the first child of navbar*/
.nav ul li:first-child a.logo i {
  color: black;
}

.sidenav {
  right: -1px;
  border-left: 1px solid #818181;
}

.sidenav a {
  padding: 8px 32px 8px 8px;
}

.sidenav-close-button {
  right: auto;
  left: 0;
  padding-right: 0 !important;
  padding-left: 30px !important;
}

input[type=checkbox]+label.checkbox:before, input[type=radio]+label.radio:before {
  margin: 4px auto auto 10px;
}

.button-couple button:not(:first-child):not(:last-child),
.button-couple a:not(:first-child):not(:last-child) {
  pointer-events: none;
  border-style: none;
  border-radius: 0;
  display: block;
  margin: -5px auto -5px auto !important;
}

@media (min-width: 768px) {
  .button-couple button:first-child,
  .button-couple a:first-child {
    border-top-right-radius: 5px;
    border-bottom-right-radius: 5px;
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
    margin-right: 0 !important;
    border-left-style: none;
    border-right-style: solid;
  }

  .button-couple button:not(:first-child):not(:last-child),
  .button-couple a:not(:first-child):not(:last-child) {
    border-style: solid;
    display: inline;
    margin: -9px !important;
  }

  .button-couple button:last-child,
  .button-couple a:last-child {
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
    border-top-left-radius: 5px;
    border-bottom-left-radius: 5px;
    margin-left: 0 !important;
    border-right-style: none;
    border-left-style: solid;
  }
}

.column, .columns {
  float: right;
  margin-left: auto;
}

@media (min-width: 544px) {
  .column:first-child, .columns:first-child {
    margin-right: 0;
    margin-left: auto;
  }

  .column, .columns {
    margin-right: 4%;
  }

  /* Offsets */
  .offset-by-one.column,
  .offset-by-one.columns          { margin-right: 8.66666666667%; }
  .offset-by-two.column,
  .offset-by-two.columns          { margin-right: 17.3333333333%; }
  .offset-by-three.column,
  .offset-by-three.columns        { margin-right: 26%;            }
  .offset-by-four.column,
  .offset-by-four.columns         { margin-right: 34.6666666667%; }
  .offset-by-five.column,
  .offset-by-five.columns         { margin-right: 43.3333333333%; }
  .offset-by-six.column,
  .offset-by-six.columns          { margin-right: 52%;            }
  .offset-by-seven.column,
  .offset-by-seven.columns        { margin-right: 60.6666666667%; }
  .offset-by-eight.column,
  .offset-by-eight.columns        { margin-right: 69.3333333333%; }
  .offset-by-nine.column,
  .offset-by-nine.columns         { margin-right: 78.0%;          }
  .offset-by-ten.column,
  .offset-by-ten.columns          { margin-right: 86.6666666667%; }
  .offset-by-eleven.column,
  .offset-by-eleven.columns       { margin-right: 95.3333333333%; }

  .offset-by-one-third.column,
  .offset-by-one-third.columns    { margin-right: 34.6666666667%; }
  .offset-by-two-thirds.column,
  .offset-by-two-thirds.columns   { margin-right: 69.3333333333%; }

  .offset-by-one-half.column,
  .offset-by-one-half.columns     { margin-right: 52%; }
}

